--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scx-admin",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Admin template for SCX",
   "license": "MIT",
   "author": "scx567888",
@@ -16,58 +16,58 @@
     "preview:test": "vite preview _test --host"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-alignment": "^40.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^40.0.0",
-    "@ckeditor/ckeditor5-block-quote": "^40.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
-    "@ckeditor/ckeditor5-code-block": "^40.0.0",
-    "@ckeditor/ckeditor5-editor-classic": "^40.0.0",
-    "@ckeditor/ckeditor5-editor-inline": "^40.0.0",
-    "@ckeditor/ckeditor5-essentials": "^40.0.0",
-    "@ckeditor/ckeditor5-find-and-replace": "^40.0.0",
-    "@ckeditor/ckeditor5-font": "^40.0.0",
-    "@ckeditor/ckeditor5-heading": "^40.0.0",
-    "@ckeditor/ckeditor5-highlight": "^40.0.0",
-    "@ckeditor/ckeditor5-horizontal-line": "^40.0.0",
-    "@ckeditor/ckeditor5-image": "^40.0.0",
-    "@ckeditor/ckeditor5-indent": "^40.0.0",
-    "@ckeditor/ckeditor5-language": "^40.0.0",
-    "@ckeditor/ckeditor5-link": "^40.0.0",
-    "@ckeditor/ckeditor5-list": "^40.0.0",
-    "@ckeditor/ckeditor5-media-embed": "^40.0.0",
-    "@ckeditor/ckeditor5-mention": "^40.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^40.0.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^40.0.0",
-    "@ckeditor/ckeditor5-remove-format": "^40.0.0",
-    "@ckeditor/ckeditor5-source-editing": "^40.0.0",
-    "@ckeditor/ckeditor5-special-characters": "^40.0.0",
-    "@ckeditor/ckeditor5-table": "^40.0.0",
-    "@ckeditor/ckeditor5-typing": "^40.0.0",
+    "@ckeditor/ckeditor5-alignment": "^40.1.0",
+    "@ckeditor/ckeditor5-basic-styles": "^40.1.0",
+    "@ckeditor/ckeditor5-block-quote": "^40.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^40.1.0",
+    "@ckeditor/ckeditor5-code-block": "^40.1.0",
+    "@ckeditor/ckeditor5-editor-classic": "^40.1.0",
+    "@ckeditor/ckeditor5-editor-inline": "^40.1.0",
+    "@ckeditor/ckeditor5-essentials": "^40.1.0",
+    "@ckeditor/ckeditor5-find-and-replace": "^40.1.0",
+    "@ckeditor/ckeditor5-font": "^40.1.0",
+    "@ckeditor/ckeditor5-heading": "^40.1.0",
+    "@ckeditor/ckeditor5-highlight": "^40.1.0",
+    "@ckeditor/ckeditor5-horizontal-line": "^40.1.0",
+    "@ckeditor/ckeditor5-image": "^40.1.0",
+    "@ckeditor/ckeditor5-indent": "^40.1.0",
+    "@ckeditor/ckeditor5-language": "^40.1.0",
+    "@ckeditor/ckeditor5-link": "^40.1.0",
+    "@ckeditor/ckeditor5-list": "^40.1.0",
+    "@ckeditor/ckeditor5-media-embed": "^40.1.0",
+    "@ckeditor/ckeditor5-mention": "^40.1.0",
+    "@ckeditor/ckeditor5-paragraph": "^40.1.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^40.1.0",
+    "@ckeditor/ckeditor5-remove-format": "^40.1.0",
+    "@ckeditor/ckeditor5-source-editing": "^40.1.0",
+    "@ckeditor/ckeditor5-special-characters": "^40.1.0",
+    "@ckeditor/ckeditor5-table": "^40.1.0",
+    "@ckeditor/ckeditor5-typing": "^40.1.0",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
-    "@ckeditor/ckeditor5-word-count": "^40.0.0",
+    "@ckeditor/ckeditor5-word-count": "^40.1.0",
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@tinymce/tinymce-vue": "^5.1.1",
-    "ckeditor5": "40.0.0",
+    "ckeditor5": "^40.1.0",
     "dayjs": "^1.11.10",
-    "element-plus": "^2.4.1",
+    "element-plus": "^2.4.2",
     "jsqr": "^1.4.0",
     "monaco-editor": "^0.44.0",
     "nprogress": "^0.2.0",
-    "scx-ui": "^1.4.0",
-    "tinymce": "^6.7.1",
+    "scx-ui": "^1.4.1",
+    "tinymce": "^6.7.3",
     "tinymce-i18n": "^23.11.6",
-    "vue": "^3.3.4",
+    "vue": "^3.3.8",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue": "^4.4.1",
     "clipboard": "^2.0.11",
     "jszip": "^3.10.1",
-    "vite": "^4.4.9",
-    "vue-router": "^4.2.4"
+    "vite": "^4.5.0",
+    "vue-router": "^4.2.5"
   },
   "peerDependencies": {
-    "vue": "^3.3.4",
+    "vue": "^3.3.8",
     "xlsx": "^0.18.5"
   }
 }
